--- a/src/index.scss
+++ b/src/index.scss
@@ -35,10 +35,16 @@ $hamsizemultiplier: 2;
 }
 
 body {
+    position: relative;
     margin: 0;
     padding: 0;
     font-family: 'Nanum Gothic', sans-serif;
     letter-spacing: 0.02em;
+}
+
+img, embed, object, video {
+	max-width: 100%;
+	height: auto;
 }
 
 a {
@@ -54,92 +60,73 @@ text-decoration: none;
 color:$hoverColor;
 cursor: pointer;
 }
+
 // ---- TEST ----
 .test {
     padding-top: 120px;
 }
 // -------------------HEADER STYLES----------------
 .site-header {
+    background: #333;
     position: fixed;
-    top: -3px;
+    top: 0;
     left: 0;
     right: 0;
     z-index: 10;
+    height: 125px;
+    transition: top 0.2s ease-in-out;
 
-    @include clearfix;
-    &__nav {
-        position: relative;
-        overflow: hidden;
-        ul {
-            list-style-type: none;
+    &__nav{
+        ul{
             padding: 0;
             margin: 0;
-            li {
-                padding: 20px 0px;
-                margin: 0px 10px;
-                border-bottom: 1px solid $secondaryGray;
-            }
-
-            li:last-child {
-                border: none;
-
-            }
+            list-style-type: none;
         }
 
+        li{
+            padding: 20px;
+            border-bottom: 1px solid $secondaryGray;
+            margin: 0px 40px;
+        }
+        li:last-child {
+            border-bottom: none;
+        }
     }
 
-    &__text-area {
+    &__left {
+        background: #fff;
         position: relative;
-    }
-
-    &__site-name {
-        font-size: 2rem;
-        margin-left: 40px;
-        width: 150px;
-        float: left;
-        padding-right: 5%;
-    }
-
-    &__description {
-        float: left;
-        width: 200px;
-        margin: 33px 0 0 0;
-        color: $secondaryBlack;
-        display: none;
-
-        @include atMedium {
-            display: inline-block;
-        }
+        width: 100%;
+        text-align: left;
+        height: 80px;
     }
 
     &__right {
         background: $mainGrey;
-        transform: translateY(0);
-        transition: all 0.3s ease;
-    }
-
-    &__left {
         position: relative;
-        top: 0px;
-        background: #fff;
-        transform: translateY(0);
-        transition: all 0.3s ease;
-        text-align: left;
-        padding: 0px;
-        width: 100%;
-        height: 80px;
+    }
+
+    &__site-name {
+        padding: 20px 0 0 40px;
+        height: 40px;
+        display: table-cell;
+        vertical-align: bottom;
+    }
+
+    &__description {
+        padding-left: 20px;
+        line-height: 25px;
+        margin: 0;
+        display: table-cell;
+        vertical-align: bottom;
+        color: $secondaryBlack;
+
+        @include atSmall {
+            display: none;
+        }
     }
 }
 
-.right-toggled {
-    transform: translateY(-100%);
-}
-
-.left-toggled {
-    transform: translateY(-250%);
-    position: relative;
-    top: -36px;
-}
 
 //Hamburger icon
 
@@ -250,4 +237,8 @@ cursor: pointer;
           font-size: 0.7rem;
           color: $secondaryBlack;
       }
+  }
+
+  .visible {
+      top: -235px;
   }
