--- a/src/index.scss
+++ b/src/index.scss
@@ -86,6 +86,19 @@ cursor: pointer;
     }
 }
 
+//------------------- KEYFRAMES -----------------
+@keyframes Gradient {
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 50%
+	}
+	100% {
+		background-position: 0% 50%
+	}
+}
+
 // -------------------HEADER STYLES----------------
 .site-header {
     background: #333;
@@ -315,4 +328,27 @@ cursor: pointer;
         h3{
             margin-bottom: 10px;
         }
+  }
+  //----------------- HOME AND HERO -----------------
+  .site-home{
+      &__hero-container {
+          width: 100%;
+          height: 500px;
+          padding: 0;
+          margin: 0;
+      }
+      &__hero {
+          height: 500px;
+          width: 500px;
+          margin: 0 auto;
+
+          &--logo {
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(-45deg,#4245f4, #23A6D5, #23D5AB, #43C181);
+            background-size: 500% 500%;
+	        animation: Gradient 30s ease infinite;
+            border-radius: 50%;
+          }
+      }
   }
