--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,7 @@ $secondaryBlack: #A7A7A7;
 $mainGrey: #EEEEEE;
 $secondaryGray: #DDD;
 $hoverColor: #2AD2B0;
+$textColor: #515151;
 
 $hambasewidth: 15px;
 $hamsizemultiplier: 2;
@@ -49,7 +50,7 @@ img, embed, object, video {
 
 a {
     color: $primaryBlack; 
-    transition: all 0.3s ease;  
+    transition: color 0.3s ease;  
     text-decoration: none;
     font-weight: 800;
     letter-spacing: 1.5px;
@@ -71,7 +72,11 @@ cursor: pointer;
 
 // ---- First section ----
 .first {
-    padding: 100px 40px 40px 40px;
+    padding: 100px 40px 10px 40px;
+
+    @include atMedium{
+        padding: 100px 40px 40px 40px;
+    }
 }
 // ---- Section rules -----
 .section-content {
@@ -109,6 +114,7 @@ cursor: pointer;
     z-index: 10;
     height: 125px;
     transition: top 0.3s ease-in-out;
+    will-change: height;
 
     &__nav{
         ul{
@@ -226,6 +232,7 @@ cursor: pointer;
     display: none;
     opacity: 0;
     transition: opacity 0.3 ease;
+    will-change: opacity, z-index, display, transform;
 
     &__visible{
         z-index: 9;
@@ -331,24 +338,121 @@ cursor: pointer;
   }
   //----------------- HOME AND HERO -----------------
   .site-home{
+
+        &__icon {
+            margin-right: 5px;
+        }
       &__hero-container {
           width: 100%;
-          height: 500px;
           padding: 0;
-          margin: 0;
+          margin: 0; 
+          overflow: hidden;
+          &--left {
+             margin: 30px 0 0 0;
+              h2 {
+                  font-weight: 800;
+
+                  @include atMedium {
+                      padding: 0;
+                      margin: 0;
+                  }
+              }
+              h2:after {
+                content: ' ';
+                display: block;
+                width: 1em;
+                height: 2px;
+                background: #222;
+                margin: 0.75em auto 0.75em;
+
+                @include atMedium {
+                    margin-left: 2.85em;
+                }
+              }
+
+              @include atMedium {
+                  float: left;
+                  width: 30%;
+              }
+              
+          }
+
+          &--right {
+            line-height: 1.5;
+            font-size: 1.3rem;
+            color: $textColor;
+        
+            a{
+                color: $hoverColor;
+                font-size: 1rem;
+            }
+
+            a:hover {
+                border-bottom: 1px solid $hoverColor;
+            }
+
+            @include atMedium {
+                float: left;
+                width: 70%;
+                font-size: 1.5rem;
+                text-align: left;
+            }
+          }
       }
       &__hero {
-          height: 500px;
-          width: 500px;
+          height: 290px;
+          width: 290px;
           margin: 0 auto;
+          
+          @include atMedium{
+            height: 500px;
+            width: 500px;
+          }
 
           &--logo {
             width: 100%;
             height: 100%;
-            background: linear-gradient(-45deg,#4245f4, #23A6D5, #23D5AB, #43C181);
-            background-size: 500% 500%;
+            background: linear-gradient(-45deg,#cb42f4, #4245f4, #23A6D5, #23D5AB, #43C181, #cb42f4);
+            background-size: 300% 300%;
 	        animation: Gradient 30s ease infinite;
             border-radius: 50%;
+            position: relative;
+            will-change: transform, animation, background;
           }
+      }
+
+      &__content {
+          z-index: 8;
+          position: absolute;
+          top: 35%;
+          left: 20%;
+          text-align: center;
+
+          @include atMedium {
+              left: 65%;
+              text-align: left;
+          }
+          &--item {
+              display: block;
+              padding: 5px 0;
+              margin: 0;
+              font-weight: 800;
+              font-size: 1rem;
+              text-shadow: 0 0 50px rgba(255,255,255,.5);
+              white-space: nowrap;
+
+              @include atMedium {
+                  font-size: 2rem;
+              }
+          }
+
+          a{
+              color: #fff;
+              font-size: 1rem;
+          }
+
+          a:hover {
+            border-bottom: 1px solid #fff;
+        }
       }
   }
