--- a/src/index.scss
+++ b/src/index.scss
@@ -88,6 +88,10 @@ cursor: pointer;
         padding-left: 5px;
     }
 
+    &__icon {
+        font-size: 0.8rem;
+    }
+
     ul {
         padding-left: 0;
         list-style-type: none;
@@ -134,10 +138,10 @@ cursor: pointer;
 
     &__skills {
         width: 100%;
-        
+        margin: 50px 0px 50px 0px;
         &__item {
             display: block;
-            height: 200px;
+            height: 180px;
             width: 50%;
             float: left;
             
